--- a/my-project/package.json
+++ b/my-project/package.json
@@ -15,17 +15,19 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "prestart": "node scripts/fetch-books.js",
+    "prebuild": "node scripts/fetch-books.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +48,9 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.4.0",
     "gh-pages": "^6.1.1",
+    "papaparse": "^5.4.1",
     "tailwindcss": "^3.4.0"
   }
 }
